samples/_failures_safe/1761707562_345d05_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a2eb484.c: In function ‘main’:
./samples/SAFE/__tmp_8a2eb484.c:141:5: error: expected declaration or statement at end of input
  141 |     if (multiply_matrices(&a, &b, &result)) {
      |     ^~
./samples/SAFE/__tmp_8a2eb484.c:141:5: error: expected declaration or statement at end of input
